# aoc2021-py

./: .tool-versions  README.md  new_day.py  pyproject.toml
day1/: day1.py  test_day1.py
day10/: day10.py  test_day10.py
day11/: day11.py  test_day11.py
day12/: day12.py  test_day12.py
day13/: day13.py  test_day13.py
day2/: day2.py  test_day2.py
day3/: day3.py  test_day3.py
day4/: day4.py  test_day4.py
day5/: day5.py  test_day5.py
day6/: day6.py  test_day6.py
day7/: day7.py  test_day7.py
day8/: day8.py  test_day8.py
day9/: day9.py  test_day9.py
