[tool.poetry]
name = "aoc2021-py"
version = "0.1.0"
description = "My solutions to Advent of Code 2021"
authors = ["Martin Frost <frost@ceri.se>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-randomly = "*"
pytest-find-dependencies = "*"
black = "*"
mypy = "*"
icecream = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
